# TestHarness-I2C-Pico-SDK

./: .gitignore  CMakeLists.txt  Readme.md  upload_I2C_receiver.sh  upload_I2C_sender.sh
I2C_receiver/: CMakeLists.txt  I2C_receiver.c
I2c_sender/: CMakeLists.txt  I2C_sender.c
pico_i2c_slave/example_mem/: example_mem.c
pico_i2c_slave/i2c_slave/: i2c_slave.c
